Fix dark mode bookpub footnote highlight

--- a/frontend/styles/bookpub.scss
+++ b/frontend/styles/bookpub.scss
@@ -13,6 +13,7 @@
     }
 }
 
-.footnotes li:target {
+.footnotes li:target p {
+    color:  var(--froide-highlight-color);
     background-color: var(--froide-highlight-bg);
 }
